--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,10 +8,10 @@
     <param-value>/WEB-INF/spring-config/applicationContext.xml</param-value>
   </context-param>
   <listener>
-    <listener-class>
-            org.springframework.web.context.ContextLoaderListener
-        </listener-class>
+    <listener-class>org.springframework.web.context.ContextLoaderListener
+    </listener-class>
   </listener>
+
   <listener>
     <listener-class>
             org.springframework.web.context.request.RequestContextListener
@@ -76,4 +76,17 @@
     <param-name>javax.faces.STATE_SAVING_METHOD</param-name>
     <param-value>client</param-value>
   </context-param>
+
+  <!-- Spring Security -->
+  <filter>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <filter-class>org.springframework.web.filter.DelegatingFilterProxy
+    </filter-class>
+  </filter>
+
+  <filter-mapping>
+    <filter-name>springSecurityFilterChain</filter-name>
+    <url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
 </web-app>
